# zart

./: .gitignore  .ignore  .pre-commit-config.yaml  Cargo.toml  Justfile  LICENSE.txt  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml  vercel.yml
crates/scheduler/: Cargo.toml
crates/scheduler/migrations/: 0001_initial_schema.sql
crates/scheduler/migrations-sqlite/: 0001_initial_schema.sql
crates/scheduler/src/: error.rs  lib.rs  pause_storage.rs  recurrence.rs  types.rs
crates/scheduler/src/postgres/: credentials.rs  mod.rs  scheduler_impl.rs  storage_impl.rs
crates/scheduler/src/sqlite/: mod.rs
crates/scheduler/tests/: integration_test.rs
crates/zart/: Cargo.toml  README.md
crates/zart-api/: Cargo.toml  README.md
crates/zart-api/src/: admin_routes.rs  lib.rs  models.rs  openapi.rs  routes.rs  server.rs  state.rs
crates/zart-cli/: Cargo.toml  README.md
crates/zart-cli/src/: db.rs  fmt.rs  main.rs
crates/zart-cli/src/cmd/: admin_exec.rs  admin_pause.rs  exec.rs  mod.rs
crates/zart-core/: Cargo.toml  README.md
crates/zart-core/src/: error.rs  lib.rs  recurrence.rs  table_names.rs  task_metadata.rs  types.rs
crates/zart-core/src/store/: mod.rs  pause_storage.rs
crates/zart-macros/: Cargo.toml  README.md
crates/zart-macros/src/: capture.rs  durable_attr.rs  durable_loop.rs  lib.rs  step_attr.rs  utils.rs  wait_event.rs
crates/zart-macros/tests/: macros_test.rs
crates/zart-scheduler/: Cargo.toml  README.md
crates/zart-scheduler/migrations/: 0001_initial_schema.sql
crates/zart-scheduler/sql/: 0001_scheduler.sql
crates/zart-scheduler/src/: completion.rs  error.rs  lib.rs  ops.rs  pause_storage.rs  recurrence.rs  registry.rs  store.rs  task.rs  task_metadata.rs  types.rs  worker.rs  worker_config.rs
crates/zart-scheduler/src/postgres/: admin_storage_impl.rs  event_storage_impl.rs  execution_reset_impl.rs  execution_storage_impl.rs  mod.rs  pause_storage_impl.rs  scheduler_impl.rs  sql_helpers.rs  step_storage_impl.rs  storage_impl.rs  table_names.rs  wait_group_storage_impl.rs
crates/zart-scheduler/src/repository/: admin.rs  event.rs  execution.rs  mod.rs  step.rs  wait_group.rs
crates/zart-scheduler/tests/: integration_test.rs
crates/zart/migrations/: 0001_execution.sql  0002_execution.sql
crates/zart/src/: api.rs  api_trait.rs  builder.rs  context.rs  durable.rs  error.rs  execution_model.rs  lib.rs  local.rs  logging.rs  metrics.rs  recurring.rs  registry.rs  retry.rs  step_completion.rs  step_ops.rs  task.rs  test_helpers.rs  timeout.rs  trx_impl.rs  worker.rs
crates/zart/src/admin/: mod.rs
crates/zart/src/context/: mod.rs  state.rs  step_context.rs  step_trait.rs  task_context.rs  tests.rs
crates/zart/src/postgres/: admin_storage_impl.rs  event_storage_impl.rs  execution_storage_impl.rs  mod.rs  pause_storage_impl.rs  scheduler_delegation.rs  scheduler_impl.rs  sql_helpers.rs  step_storage_impl.rs  table_names.rs  wait_group_storage_impl.rs
crates/zart/src/service/: execution_service.rs  mod.rs  pause_service.rs
crates/zart/src/step_types/: body.rs  completion.rs  dispatch.rs  mod.rs  step.rs
crates/zart/src/store/: mod.rs  pause_store.rs
crates/zart/src/task_metadata/: mod.rs
crates/zart/src/types/: mod.rs
crates/zart/tests/: integration_test.rs  macros.rs
crates/zart/tests/integration/: admin_retry.rs  basic_execution.rs  cancellation.rs  dispatch.rs  event_driven.rs  helpers.rs  mod.rs  parallel_steps.rs  recurring_durable.rs  selective_rerun.rs  transaction.rs  typed_completion.rs
examples/: Cargo.toml
examples/admin-demo/: Cargo.toml  README.md
examples/admin-demo/src/: main.rs
examples/approval-workflow/: README.md
examples/approval-workflow/src/: main.rs
examples/brewery-finder/: README.md
examples/brewery-finder-raw/src/: main.rs
examples/brewery-finder-step-fn/src/: main.rs
examples/brewery-finder-trait-impl/src/: main.rs
examples/brewery-finder/src/: main.rs
examples/cli-demo/: Cargo.toml  README.md  demo.sh
examples/cli-demo/src/: main.rs
examples/durable-loops/: README.md
examples/durable-loops/src/: main.rs
examples/error-handling/: Cargo.toml  README.md
examples/error-handling/src/: main.rs
examples/parallel-steps/: README.md
examples/parallel-steps/src/: main.rs
examples/radkit-agent/: README.md
examples/radkit-agent/src/: main.rs
examples/recurring-durable/: README.md
examples/recurring-durable/src/: main.rs
examples/recurring-tasks/: README.md
examples/recurring-tasks/src/: main.rs
examples/retry-simulation/: README.md
examples/retry-simulation/src/: main.rs
examples/scheduler-only/: README.md
examples/scheduler-only/src/: main.rs
examples/sleep/: README.md
examples/sleep/src/: main.rs
examples/tests/: example_tests.rs
examples/transactions/: README.md
examples/transactions/src/: main.rs
examples/ui-demo/: Cargo.toml  README.md
examples/ui-demo/src/: main.rs
scheduler/: Cargo.toml
scheduler/src/: types.rs
specs/: 0048-proper-sqlx-enum-types.md  0049-drop-pause-snapshots.md  0050-openapi-swagger.md  0051-configurable-route-prefixes.md  0052-durable-objects.md  0053-recurring-durable-executions.md  0054-task-queues.md
webpage/: astro.config.mjs  package-lock.json  package.json
webpage/src/components/: CustomHead.astro  DevBanner.astro
webpage/src/content/docs/: about.mdx  features.mdx  getting-started.mdx
webpage/src/content/docs/admin/: index.mdx
webpage/src/pages/: index.astro
webpage/src/styles/: custom.css
zart-api/src/: routes.rs
zart-macros/src/: lib.rs
zart-ui/: Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
zart-ui/src/: index.css  main.tsx
zart-ui/src/api/: client.test.ts  client.ts  types.ts
zart-ui/src/components/: Dashboard.test.tsx  Dashboard.tsx  ExecutionDetail.tsx  ExecutionList.tsx  PauseRules.tsx  StartExecutionDialog.tsx  StepGraph.tsx  shared.test.tsx  shared.tsx
zart-ui/src/hooks/: usePolling.ts
zart-ui/src/test/: setup.ts
zart/src/: context.rs  error.rs
(+62 files in other folders)
