[workspace]
members = [
    "crates/zart-scheduler",
    "crates/zart",
    "crates/zart-cli",
    "crates/zart-api",
    "crates/zart-macros",
    "examples",
    "examples/admin-demo",
    "examples/cli-demo",
    "examples/ui-demo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Zart Contributors"]
license = "MIT"
repository = "https://github.com/zart-rs/zart"

[workspace.dependencies]
# Internal crates
zart-scheduler = { path = "crates/zart-scheduler", version = "0.1.0" }
zart = { path = "crates/zart", version = "0.1.0" }
zart-macros = { path = "crates/zart-macros", version = "0.1.0" }

# Async runtime
tokio = { version = "1.52.0", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
lazy_static = "1.5"

# Graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Cron
cron = "0.12"

# Glob matching
globset = "0.4.18"

# HTTP
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid", "migrate"] }

# Proc-macro utilities (only used by zart-macros, kept here for consistency)
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

# Testing
tokio-test = "0.4"
