[package]
name = "zart-examples"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "example-brewery-finder"
path = "brewery-finder/src/main.rs"

[[bin]]
name = "example-approval-workflow"
path = "approval-workflow/src/main.rs"

[[bin]]
name = "example-parallel-steps"
path = "parallel-steps/src/main.rs"

[dependencies]
zart = { path = "../crates/zart" }
zart-macros = { path = "../crates/zart-macros" }
scheduler = { path = "../crates/scheduler", features = ["postgres"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sqlx.workspace = true
