[package]
name = "zart-examples"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "example-brewery-finder"
path = "brewery-finder/src/main.rs"

[[bin]]
name = "example-brewery-finder-step-fn"
path = "brewery-finder-step-fn/src/main.rs"

[[bin]]
name = "example-approval-workflow"
path = "approval-workflow/src/main.rs"

[[bin]]
name = "example-parallel-steps"
path = "parallel-steps/src/main.rs"

[[bin]]
name = "example-radkit-agent"
path = "radkit-agent/src/main.rs"

[[bin]]
name = "example-retry-simulation"
path = "retry-simulation/src/main.rs"

[dependencies]
zart = { path = "../crates/zart" }
zart-macros = { path = "../crates/zart-macros" }
scheduler = { path = "../crates/scheduler", features = ["postgres"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
radkit = { version = "0.0.5", features = ["runtime"] }
schemars = { version = "1", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tokio = { workspace = true }
sqlx.workspace = true
