[package]
name = "zart-api"
description = "Optional Axum HTTP server for Zart — exposes execution status, cancellation, and event delivery endpoints"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zart.workspace = true
scheduler.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true

[features]
metrics = ["zart/metrics"]

[dev-dependencies]
tokio.workspace = true
async-trait.workspace = true
tower-http.workspace = true
