[package]
name = "zart-api"
description = "Optional Axum HTTP server for Zart — exposes execution status, cancellation, and event delivery endpoints"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
zart.workspace = true
zart-scheduler.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
utoipa             = { version = "5", features = ["axum_extras", "chrono", "uuid"], optional = true }
utoipa-swagger-ui  = { version = "9", features = ["axum"],                          optional = true }

[features]
metrics = ["zart/metrics"]
openapi = ["utoipa", "utoipa-swagger-ui"]

[dev-dependencies]
tokio.workspace = true
async-trait.workspace = true
tower-http.workspace = true
