[package]
name = "zart-cli"
description = "Command-line interface for Zart — migrate, schedule, inspect, and manage durable executions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "zart"
path = "src/main.rs"
doc = false

[dependencies]
zart.workspace = true
zart-scheduler.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
