[package]
name = "zart-macros"
description = "Procedural macros for Zart — #[zart_durable], z_step!, z_step_with_retry!, z_wait_event!, z_durable_loop!"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
zart.workspace = true
scheduler.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
