[package]
name = "zart-macros"
description = "Procedural macros for Zart — #[zart_durable], #[zart_step], z_wait_event!, zart_capture!"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
zart.workspace = true
scheduler.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
