[package]
name = "zart-macros"
description = "Procedural macros for Zart — #[zart_durable], #[zart_step], z_wait_event!, zart_capture!"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

