[package]
name = "zart-scheduler"
description = "Core scheduling primitives for Zart — task polling, skip-lock, and storage backend abstraction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
cron.workspace = true
tokio = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
