[package]
name = "zart"
description = "Durable execution framework — multi-step workflows with persistence, retries, and observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
scheduler.workspace = true
zart-macros.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio.workspace = true
prometheus = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
tokio-util.workspace = true

[features]
metrics = ["dep:prometheus", "dep:lazy_static"]

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
scheduler = { workspace = true, features = ["postgres"] }
sqlx.workspace = true
uuid.workspace = true
