[package]
name = "zart"
description = "Durable execution framework — multi-step workflows with persistence, retries, and observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zart-scheduler.workspace = true
zart-macros.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio.workspace = true
prometheus = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
tokio-util.workspace = true
sqlx = { workspace = true, features = ["postgres"] }

[features]
metrics = ["dep:prometheus", "dep:lazy_static"]

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "macros"
path = "tests/macros.rs"

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
tracing-subscriber.workspace = true
zart-scheduler.workspace = true
sqlx.workspace = true
uuid.workspace = true
