[package]
name = "example-cli-demo"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "example-cli-demo"
path = "src/main.rs"

[dependencies]
zart = { path = "../../crates/zart" }
scheduler = { path = "../../crates/scheduler", features = ["postgres"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
