[package]
name = "example-error-handling"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example-error-handling"
path = "src/main.rs"

[dependencies]
scheduler = { path = "../../crates/scheduler" }
zart = { path = "../../crates/zart" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
