[package]
name = "example-ui-demo"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "example-ui-demo"
path = "src/main.rs"

[dependencies]
zart = { path = "../../crates/zart" }
zart-api = { path = "../../crates/zart-api" }
zart-scheduler = { path = "../../crates/zart-scheduler" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
